AC_PREREQ(2.53)

AC_INIT([gnome-themes], [2.12.3],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-themes])
AC_CONFIG_SRCDIR([LargePrint])

AM_INIT_AUTOMAKE([1.9 tar-ustar])
AM_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

dnl Honor aclocal flags
ACLOCAL_AMFLAGS="\${ACLOCAL_FLAGS}"
AC_SUBST(ACLOCAL_AMFLAGS)


AC_PROG_INTLTOOL([0.23])

AC_PROG_CC
# Checks for header files.
AC_HEADER_STDC
# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(setenv putenv)

AM_PROG_LIBTOOL

# theme engines
PKG_CHECK_MODULES(THEME_ENGINE,
 [gtk+-2.0 >= 2.0.0 dnl
  gdk-pixbuf-2.0 >= 2.0.0 dnl
  gtk-engines-2 >= 2.5.0 ])

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(GTK_VERSION)


# gettext stuff
GETTEXT_PACKAGE=gnome-themes
AC_SUBST(GETTEXT_PACKAGE)

ALL_LINGUAS="am ar az be bg bn bs ca cs cy da de el en_CA en_GB es et eu fa fi fr ga gl gu he hi hr hu id is it ja ko li lt lv mk ml mn ms nb ne nl nn no pa pl pt pt_BR ro ru rw sk sl sq sr sr@Latn sv ta th tr ug uk vi wa xh zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_ARG_ENABLE(all-themes,
 AC_HELP_STRING([--enable-all-themes],
     [Install all a11y theme sets, default is core a11y themes only]),,
 [enable_all_themes=no])
AM_CONDITIONAL(CORE_THEMES_ONLY, test "$enable_all_themes" = no)

### Icon sizes for all large print themes

LARGEPRINT_DND="48,48"
LARGEPRINT_MENU="32,32"
LARGEPRINT_PANEL_MENU="48,48"
LARGEPRINT_LARGE_TOOLBAR="48,48"
LARGEPRINT_SMALL_TOOLBAR="32,32"
LARGEPRINT_BUTTON="32,32"
LARGEPRINT_DIALOG="64,64"
LARGEPRINT_MINI_COMMANDER="24,24"

LARGEPRINT_ICON_SIZES="mini-commander-icon=$LARGEPRINT_MINI_COMMANDER:print-manager=$LARGEPRINT_DIALOG:panel-button=$LARGEPRINT_BUTTON:gtk-dnd=$LARGEPRINT_DND:gtk-menu=$LARGEPRINT_MENU:panel-menu=$LARGEPRINT_PANEL_MENU:gtk-large-toolbar=$LARGEPRINT_LARGE_TOOLBAR:gtk-small-toolbar=$LARGEPRINT_SMALL_TOOLBAR:gtk-button=$LARGEPRINT_BUTTON:gtk-dialog=$LARGEPRINT_DIALOG"

LARGEPRINT_FONT="sans 18"
LARGEPRINT_DESKTOP_FONT="sans 18"
LARGEPRINT_MONOSPACE_FONT="monospace 18"


AC_SUBST(LARGEPRINT_ICON_SIZES)
AC_SUBST(LARGEPRINT_FONT)
AC_SUBST(LARGEPRINT_DESKTOP_FONT)
AC_SUBST(LARGEPRINT_MONOSPACE_FONT)

dnl used to substitute in common sections of theme gtkrc files
gtk_stock_icons_rc=${srcdir}/common/gtk-stock-icons.rc
panel_stock_icons_rc=${srcdir}/common/panel-stock-icons.rc
media_stock_icons_rc=${srcdir}/common/media-stock-icons.rc
capplet_stock_icons_rc=${srcdir}/common/capplet-stock-icons.rc
metacity_stock_icons_rc=${srcdir}/common/metacity-stock-icons.rc
AC_SUBST_FILE(gtk_stock_icons_rc)
AC_SUBST_FILE(panel_stock_icons_rc)
AC_SUBST_FILE(media_stock_icons_rc)
AC_SUBST_FILE(capplet_stock_icons_rc)
AC_SUBST_FILE(metacity_stock_icons_rc)

AC_CONFIG_FILES([
Makefile
gnome-themes.spec
desktop-themes/Makefile
desktop-themes/Crux/Makefile
desktop-themes/Clearlooks/Makefile
desktop-themes/Grand-Canyon/Makefile
desktop-themes/Mist/Makefile
desktop-themes/Ocean-Dream/Makefile
desktop-themes/Simple/Makefile
desktop-themes/Smokey-Blue/Makefile
desktop-themes/Glider/Makefile
desktop-themes/Traditional/Makefile
gtk-themes/Makefile
gtk-themes/Simple/Makefile
gtk-themes/Grand-Canyon/Makefile
gtk-themes/Smokey-Blue/Makefile
gtk-themes/Glider/Makefile
metacity-themes/Makefile
icon-themes/Makefile
icon-themes/Crux/Makefile
icon-themes/Flat-Blue/Makefile
icon-themes/Sandy/Makefile
icon-themes/Smokey-Blue/Makefile
icon-themes/Smokey-Red/Makefile
common/Makefile
HighContrast/Makefile
HighContrast/gtk-2.0/Makefile
HighContrast/gtk-2.0/gtkrc
HighContrast/icons/Makefile
HighContrastInverse/Makefile
HighContrastInverse/gtk-2.0/Makefile
HighContrastInverse/gtk-2.0/gtkrc
HighContrastInverse/icons/Makefile
LargePrint/Makefile
LargePrint/index.theme.in
LargePrint/gtk-2.0/Makefile
LargePrint/gtk-2.0/gtkrc
LargePrint/pixmaps/Makefile
LargePrint/icons/Makefile
HighContrastLargePrint/Makefile
HighContrastLargePrint/index.theme.in
HighContrastLargePrint/gtk-2.0/Makefile
HighContrastLargePrint/gtk-2.0/gtkrc
HighContrastLargePrint/pixmaps/Makefile
HighContrastLargePrint/icons/Makefile
HighContrastLargePrint/icons/48x48/Makefile
HighContrastLargePrint/icons/48x48/apps/Makefile
HighContrastLargePrint/icons/48x48/mimetypes/Makefile
HighContrastLargePrint/icons/48x48/filesystems/Makefile
HighContrastLargePrint/icons/48x48/devices/Makefile
HighContrastLargePrint/icons/48x48/emblems/Makefile
HighContrastLargePrintInverse/Makefile
HighContrastLargePrintInverse/index.theme.in
HighContrastLargePrintInverse/gtk-2.0/Makefile
HighContrastLargePrintInverse/gtk-2.0/gtkrc
HighContrastLargePrintInverse/pixmaps/Makefile
HighContrastLargePrintInverse/icons/Makefile
HighContrastLargePrintInverse/icons/48x48/Makefile
HighContrastLargePrintInverse/icons/48x48/apps/Makefile
HighContrastLargePrintInverse/icons/48x48/devices/Makefile
HighContrastLargePrintInverse/icons/48x48/emblems/Makefile
HighContrastLargePrintInverse/icons/48x48/filesystems/Makefile
HighContrastLargePrintInverse/icons/48x48/mimetypes/Makefile
LowContrastLargePrint/Makefile
LowContrastLargePrint/index.theme.in
LowContrastLargePrint/gtk-2.0/Makefile
LowContrastLargePrint/gtk-2.0/gtkrc
LowContrastLargePrint/pixmaps/Makefile
LowContrastLargePrint/icons/Makefile
LowContrastLargePrint/icons/48x48/Makefile
LowContrastLargePrint/icons/48x48/apps/Makefile
LowContrastLargePrint/icons/48x48/devices/Makefile
LowContrastLargePrint/icons/48x48/emblems/Makefile
LowContrastLargePrint/icons/48x48/filesystems/Makefile
LowContrastLargePrint/icons/48x48/mimetypes/Makefile
LowContrast/Makefile
LowContrast/gtk-2.0/Makefile
LowContrast/gtk-2.0/gtkrc
LowContrast/icons/Makefile
po/Makefile.in
])

AC_OUTPUT
