AC_PREREQ(2.53)

AC_INIT([gnome-themes], [2.15.91],
        [http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-themes])
AC_CONFIG_SRCDIR([LargePrint])

AM_INIT_AUTOMAKE([1.9 tar-ustar])
AM_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

dnl Honor aclocal flags
ACLOCAL_AMFLAGS="\${ACLOCAL_FLAGS}"
AC_SUBST(ACLOCAL_AMFLAGS)

IT_PROG_INTLTOOL([0.34.90])

AC_PROG_CC
# Checks for header files.
AC_HEADER_STDC
# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
# Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_ALLOCA
AC_CHECK_FUNCS(setenv putenv)

AM_PROG_LIBTOOL

# theme engines
PKG_CHECK_MODULES(THEME_ENGINE,
 [gtk+-2.0 >= 2.0.0 dnl
  gdk-pixbuf-2.0 >= 2.0.0 dnl
  gtk-engines-2 >= 2.5.0 ])

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(GTK_VERSION)

# icon-naming-utils (optional for now, only used by HighContrast-SVG)
UTILS_REQUIRED=0.8.0
AC_MSG_CHECKING([icon-naming-utils >= $UTILS_REQUIRED])
PKG_CHECK_EXISTS(icon-naming-utils >= $UTILS_REQUIRED,
                 have_utils=yes, have_utils=no)

if test "x$have_utils" = "xyes"; then
   UTILS_PATH="`$PKG_CONFIG --variable=program_path icon-naming-utils`"
   ICONMAP="$UTILS_PATH/icon-name-mapping"
   AC_SUBST(ICONMAP)
   AC_MSG_RESULT([yes])
else
   AC_MSG_RESULT([no])
fi

# gettext stuff
GETTEXT_PACKAGE=gnome-themes
AC_SUBST(GETTEXT_PACKAGE)

AM_GLIB_GNU_GETTEXT

AC_ARG_ENABLE(all-themes,
 AC_HELP_STRING([--enable-all-themes],
     [Install all a11y theme sets, default is core a11y themes only]),,
 [enable_all_themes=no])
AM_CONDITIONAL(CORE_THEMES_ONLY, test "$enable_all_themes" = no)

### Icon sizes for all large print themes

LARGEPRINT_DND="48,48"
LARGEPRINT_MENU="32,32"
LARGEPRINT_PANEL_MENU="48,48"
LARGEPRINT_LARGE_TOOLBAR="48,48"
LARGEPRINT_SMALL_TOOLBAR="32,32"
LARGEPRINT_BUTTON="32,32"
LARGEPRINT_DIALOG="64,64"
LARGEPRINT_MINI_COMMANDER="24,24"

LARGEPRINT_ICON_SIZES="mini-commander-icon=$LARGEPRINT_MINI_COMMANDER:print-manager=$LARGEPRINT_DIALOG:panel-button=$LARGEPRINT_BUTTON:gtk-dnd=$LARGEPRINT_DND:gtk-menu=$LARGEPRINT_MENU:panel-menu=$LARGEPRINT_PANEL_MENU:gtk-large-toolbar=$LARGEPRINT_LARGE_TOOLBAR:gtk-small-toolbar=$LARGEPRINT_SMALL_TOOLBAR:gtk-button=$LARGEPRINT_BUTTON:gtk-dialog=$LARGEPRINT_DIALOG"

LARGEPRINT_FONT="sans 18"
LARGEPRINT_DESKTOP_FONT="sans 18"
LARGEPRINT_MONOSPACE_FONT="monospace 18"


AC_SUBST(LARGEPRINT_ICON_SIZES)
AC_SUBST(LARGEPRINT_FONT)
AC_SUBST(LARGEPRINT_DESKTOP_FONT)
AC_SUBST(LARGEPRINT_MONOSPACE_FONT)

dnl used to substitute in common sections of theme gtkrc files
gtk_stock_icons_rc=${srcdir}/common/gtk-stock-icons.rc
panel_stock_icons_rc=${srcdir}/common/panel-stock-icons.rc
media_stock_icons_rc=${srcdir}/common/media-stock-icons.rc
capplet_stock_icons_rc=${srcdir}/common/capplet-stock-icons.rc
metacity_stock_icons_rc=${srcdir}/common/metacity-stock-icons.rc
AC_SUBST_FILE(gtk_stock_icons_rc)
AC_SUBST_FILE(panel_stock_icons_rc)
AC_SUBST_FILE(media_stock_icons_rc)
AC_SUBST_FILE(capplet_stock_icons_rc)
AC_SUBST_FILE(metacity_stock_icons_rc)

AC_CONFIG_FILES([
Makefile
gnome-themes.spec
desktop-themes/Makefile
desktop-themes/Crux/Makefile
desktop-themes/Clearlooks/Makefile
desktop-themes/Glider/Makefile
desktop-themes/Mist/Makefile
metacity-themes/Makefile
gtk-themes/Makefile
gtk-themes/Glider/Makefile
gtk-themes/Clarius/Makefile
icon-themes/Makefile
icon-themes/Crux/Makefile
icon-themes/HighContrast-SVG/Makefile
icon-themes/HighContrast-SVG/48x48/Makefile
icon-themes/HighContrast-SVG/48x48/animations/Makefile
icon-themes/HighContrast-SVG/scalable/Makefile
icon-themes/HighContrast-SVG/scalable/actions/Makefile
icon-themes/HighContrast-SVG/scalable/apps/Makefile
icon-themes/HighContrast-SVG/scalable/categories/Makefile
icon-themes/HighContrast-SVG/scalable/devices/Makefile
icon-themes/HighContrast-SVG/scalable/emblems/Makefile
icon-themes/HighContrast-SVG/scalable/mimetypes/Makefile
icon-themes/HighContrast-SVG/scalable/places/Makefile
icon-themes/HighContrast-SVG/scalable/status/Makefile
icon-themes/Mist/Makefile
icon-themes/Mist/16x16/Makefile
icon-themes/Mist/16x16/places/Makefile
icon-themes/Mist/22x22/Makefile
icon-themes/Mist/22x22/places/Makefile
icon-themes/Mist/32x32/Makefile
icon-themes/Mist/32x32/places/Makefile
icon-themes/Mist/scalable/Makefile
icon-themes/Mist/scalable/places/Makefile
common/Makefile
HighContrast/Makefile
HighContrast/gtk-2.0/Makefile
HighContrast/gtk-2.0/gtkrc
HighContrast/icons/Makefile
HighContrastInverse/Makefile
HighContrastInverse/gtk-2.0/Makefile
HighContrastInverse/gtk-2.0/gtkrc
HighContrastInverse/icons/Makefile
LargePrint/Makefile
LargePrint/index.theme.in
LargePrint/gtk-2.0/Makefile
LargePrint/gtk-2.0/gtkrc
LargePrint/pixmaps/Makefile
LargePrint/icons/Makefile
HighContrastLargePrint/Makefile
HighContrastLargePrint/index.theme.in
HighContrastLargePrint/gtk-2.0/Makefile
HighContrastLargePrint/gtk-2.0/gtkrc
HighContrastLargePrint/pixmaps/Makefile
HighContrastLargePrint/icons/Makefile
HighContrastLargePrint/icons/48x48/Makefile
HighContrastLargePrint/icons/48x48/apps/Makefile
HighContrastLargePrint/icons/48x48/mimetypes/Makefile
HighContrastLargePrint/icons/48x48/filesystems/Makefile
HighContrastLargePrint/icons/48x48/devices/Makefile
HighContrastLargePrint/icons/48x48/emblems/Makefile
HighContrastLargePrintInverse/Makefile
HighContrastLargePrintInverse/index.theme.in
HighContrastLargePrintInverse/gtk-2.0/Makefile
HighContrastLargePrintInverse/gtk-2.0/gtkrc
HighContrastLargePrintInverse/pixmaps/Makefile
HighContrastLargePrintInverse/icons/Makefile
HighContrastLargePrintInverse/icons/48x48/Makefile
HighContrastLargePrintInverse/icons/48x48/apps/Makefile
HighContrastLargePrintInverse/icons/48x48/devices/Makefile
HighContrastLargePrintInverse/icons/48x48/emblems/Makefile
HighContrastLargePrintInverse/icons/48x48/filesystems/Makefile
HighContrastLargePrintInverse/icons/48x48/mimetypes/Makefile
LowContrastLargePrint/Makefile
LowContrastLargePrint/index.theme.in
LowContrastLargePrint/gtk-2.0/Makefile
LowContrastLargePrint/gtk-2.0/gtkrc
LowContrastLargePrint/pixmaps/Makefile
LowContrastLargePrint/icons/Makefile
LowContrastLargePrint/icons/48x48/Makefile
LowContrastLargePrint/icons/48x48/apps/Makefile
LowContrastLargePrint/icons/48x48/devices/Makefile
LowContrastLargePrint/icons/48x48/emblems/Makefile
LowContrastLargePrint/icons/48x48/filesystems/Makefile
LowContrastLargePrint/icons/48x48/mimetypes/Makefile
LowContrast/Makefile
LowContrast/gtk-2.0/Makefile
LowContrast/gtk-2.0/gtkrc
LowContrast/icons/Makefile
po/Makefile.in
])

AC_OUTPUT
