pixmapdir=	$(datadir)/themes/HighContrastLargePrintInverse/pixmaps

pixmap_DATA=	stock_about.png stock_add.png stock_apply.png \
		stock_attach.png stock_bold.png stock_book.png \
		stock_cancel.png stock_cdrom.png stock_clear.png \
		stock_close.png stock_connect.png stock_convert.png \
		stock_copy.png stock_cut.png stock_delete.png \
		stock_dialog_error.png stock_dialog_info.png \
		stock_dialog_question.png stock_dialog_warning.png \
		stock_disconnect.png stock_edit.png stock_empty.png \
		stock_execute.png stock_export.png \
		stock_find-and-replace.png stock_find.png \
		stock_floppy.png stock_go-back.png \
		stock_go-down.png stock_go-forward.png \
		stock_go-up.png stock_goto-bottom.png \
		stock_goto-first.png stock_goto-last.png \
		stock_goto-top.png stock_help.png stock_home.png \
		stock_import.png stock_index.png \
		stock_insert-image.png stock_insert-object.png \
		stock_insert-table.png stock_italic.png \
		stock_jump-to.png stock_justify-center.png \
		stock_justify-fill.png stock_justify-left.png \
		stock_justify-right.png stock_line-in.png \
		stock_mic.png stock_missing-image.png stock_new.png \
		stock_ok.png stock_open.png stock_paste.png \
		stock_preferences.png stock_print-preview.png \
		stock_print.png stock_properties.png stock_quit.png \
		stock_redo.png stock_refresh.png stock_remove.png \
		stock_revert-to-saved.png stock_save-as.png \
		stock_save.png stock_select-color.png \
		stock_select-font.png stock_sort-ascending.png \
		stock_sort-descending.png stock_spell-check.png \
		stock_stop.png stock_strikethrough.png \
		stock_undelete.png stock_underline.png \
		stock_undo.png stock_volume.png stock_zoom-100.png \
		stock_zoom-fit.png stock_zoom-in.png \
		stock_zoom-out.png

EXTRA_DIST=	$(pixmap_DATA)

