pixmapdir=	$(datadir)/themes/LargePrint/pixmaps

pixmap_DATA=	stock_about.png stock_attach.png stock_balance.png \
		stock_book.png stock_book_open.png stock_bottom.png \
		stock_broken_image.png stock_cancel.png stock_cdrom.png \
		stock_convert.png stock_copy.png stock_cut.png \
		stock_delete.png stock_down.png stock_edit.png \
		stock_exec.png stock_exit.png stock_export.png \
		stock_first.png stock_font.png stock_help.png \
		stock_home.png stock_import.png stock_insert-image.png \
		stock_insert-object.png stock_insert-table.png \
		stock_jump-to.png stock_last.png stock_left.png \
		stock_line_in.png stock_mike.png stock_new.png \
		stock_ok.png stock_open.png stock_palette.png \
		stock_paste.png stock_preferences.png \
		stock_print-preview.png stock_print.png \
		stock_properties.png stock_redo.png stock_refresh.png \
		stock_revert.png stock_right.png stock_save.png \
		stock_save_as.png stock_search.png \
		stock_search_and_replace.png stock_spellcheck.png \
		stock_stop.png stock_text_align_center.png \
		stock_text_align_justify.png stock_text_align_left.png \
		stock_text_align_right.png stock_text_bold.png \
		stock_text_italic.png stock_text_strikethrough.png \
		stock_text_underline.png stock_top.png \
		stock_undelete.png stock_undo.png stock_up.png \
		stock_volume.png stock_zoom_1.png stock_zoom_fit.png \
		stock_zoom_in.png stock_zoom_out.png

EXTRA_DIST=	$(pixmap_DATA)
